tests/arch/riscv/error/compiler/test_riscv_error_compiler_002.s

#
# Creator (https://creatorsim.github.io/creator/)
#

 .data
 	A:		.word -1
   a:		.byte -1
    
.text
main:
	suma t0, t1, t2